<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainClassList">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="157dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="First Name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="178dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/firstName" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="xxx-xxx-xxxx"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <TextView
        android:id="@+id/DOBText"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="Date of Birth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <Spinner
        android:id="@+id/monthSpinner"
        android:layout_width="97dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="72dp"
        android:entries="@array/monthSpinnerOptions"
        app:layout_constraintStart_toEndOf="@+id/DOBText"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <EditText
        android:id="@+id/DOBDayTxt"
        android:layout_width="87dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="Day"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/monthSpinner"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <EditText
        android:id="@+id/DOBYearTxt"
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="Year"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/DOBDayTxt"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <TextView
        android:id="@+id/certtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="84dp"
        android:text="Certificate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DOBText" />

    <TextView
        android:id="@+id/associateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:text="Associate Degree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DOBYearTxt" />

    <Switch
        android:id="@+id/swDegreeCert"
        android:layout_width="89dp"
        android:layout_height="37dp"
        android:layout_marginTop="76dp"
        android:checked="true"
        android:showText="false"
        android:textOff="@string/cert"
        android:textOn="@string/twoYr"
        app:layout_constraintEnd_toStartOf="@+id/associateTxt"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toEndOf="@+id/certtxt"
        app:layout_constraintTop_toBottomOf="@+id/DOBDayTxt"
        tools:checked="true" />

    <Spinner
        android:id="@+id/majorSpinner"
        android:layout_width="155dp"
        android:layout_height="31dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/listMajor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swDegreeCert" />

    <Spinner
        android:id="@+id/certSpinner"
        android:layout_width="147dp"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="88dp"
        android:entries="@array/listCertification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swDegreeCert" />

    <TextView
        android:id="@+id/certLblUnderSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/cert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/certSpinner" />

    <TextView
        android:id="@+id/majorLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtMajor"
        app:layout_constraintStart_toStartOf="@+id/majorSpinner"
        app:layout_constraintTop_toBottomOf="@+id/majorSpinner" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="127dp"
        android:layout_height="60dp"
        android:layout_marginBottom="28dp"
        android:text="@string/txtNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="Phone Number:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />
</androidx.constraintlayout.widget.ConstraintLayout>